third_party/move/move-compiler-v2/tests/lambda/inline-parity/spec_inlining.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/spec_inlining.move:10:27
   │
10 │         let r1 = apply(x, |v| v >= 0);
   │                           ^^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/spec_inlining.move:16:27
   │
16 │         let r2 = apply(x, |v| v != 0);
   │                           ^^^^^^^^^^
